--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>&#x841d;&#x8389;&#x793e;影视视频网站 - 社区型影视资源在线观看！</title>
-		<meta name="description" content="&#x841d;&#x8389;&#x793e;影视视频网站提供最新、最热门的&#x841d;&#x8389;影视资源，高清画质，极速播放，让您畅享视觉盛宴。">
-		<meta name="keywords" content="&#x841d;&#x8389;&#x793e;，&#x841d;&#x8389;影视，高清视频，在线观看，影视资源，社区型影视，&#x841d;&#x8389;剧集">
+		<title>&#x841d;&#x8389;&#x793e;视频网站 - 社区型视频资源在线观看！</title>
+		<meta name="description" content="&#x841d;&#x8389;&#x793e;视频视频网站提供最新、最热门的&#x841d;&#x8389;视频资源，高清画质，极速播放，让您畅享视觉盛宴。">
+		<meta name="keywords" content="&#x841d;&#x8389;&#x793e;，&#x841d;&#x8389;视频，高清视频，在线观看，视频资源，社区型视频，&#x841d;&#x8389;剧集">
 		<link rel="shortcut icon" href="player/statics/picture/favicon.ico">
 		<link rel="stylesheet" href="player/statics/css/reset.min.css">
 		<style>
@@ -36,7 +36,7 @@
 		<img class="ground_img" src="player/statics/picture/bg.png" alt="ground">
 		<div class="container c2">
 			<div class="content">
-				<h2 class="main_title">在我们社区<span>无论您是喜欢经典和最新影视作品的影迷，还是钟情于电视剧的观众，这里都能让您找到属于自己的那份快乐。立即加入我们，开启您的精彩影视社区之旅吧！</span>
+				<h2 class="main_title">在我们社区<span>无论您是喜欢经典和最新视频作品的影迷，还是钟情于电视剧的观众，这里都能让您找到属于自己的那份快乐。立即加入我们，开启您的精彩视频社区之旅吧！</span>
 				</h2>
 				<div class="QandA">
 					<div>
@@ -55,13 +55,13 @@
 						<span>A</span>
 						<span>
 							<p class="ans">
-								<p>欢迎来到&#x841d;&#x8389;&#x793e;区型影视网站！这里是&#x841d;&#x8389;爱好者的天堂，我们致力于为您提供最新、最热门的&#x841d;&#x8389;影视资源。无论是经典的&#x841d;&#x8389;电影，还是新出的&#x841d;&#x8389;剧集，您都能在这里找到。</p>
+								<p>欢迎来到&#x841d;&#x8389;&#x793e;区型视频网站！这里是&#x841d;&#x8389;爱好者的天堂，我们致力于为您提供最新、最热门的&#x841d;&#x8389;视频资源。无论是经典的&#x841d;&#x8389;电影，还是新出的&#x841d;&#x8389;剧集，您都能在这里找到。</p>
 								<p>我们的网站拥有以下特点：</p>
-								<p>1. **HD画质**：我们提供的影视资源均为hd画质，让您在观看时享受到极致的视觉体验。</p>
+								<p>1. **HD画质**：我们提供的视频资源均为hd画质，让您在观看时享受到极致的视觉体验。</p>
 								<p>2. **极速播放**：我们的服务器响应速度快，播放流畅，无需等待，让您随时畅享精彩内容。</p>
-								<p>3. **丰富资源**：&#x841d;&#x8389;&#x793e;影视视频网站收录了大量的&#x841d;&#x8389;影视作品，包括国内外热门影视剧，满足您的不同观影需求。</p>
-								<p>4. **更新及时**：我们密切关注影视市场的动态，第一时间为您更新最新上映的&#x841d;&#x8389;影视作品。</p>
-								<p>在这里，您可以自由选择喜欢的&#x841d;&#x8389;影视作品，轻松实现在线观看。&#x841d;&#x8389;&#x793e;影视视频社区，是您享受视觉盛宴的最佳选择。赶快加入我们，开启您的&#x841d;&#x8389;影视社区之旅吧！</p>
+								<p>3. **丰富资源**：&#x841d;&#x8389;&#x793e;视频视频网站收录了大量的&#x841d;&#x8389;视频作品，包括国内外热门视频剧，满足您的不同观影需求。</p>
+								<p>4. **更新及时**：我们密切关注视频市场的动态，第一时间为您更新最新上映的&#x841d;&#x8389;视频作品。</p>
+								<p>在这里，您可以自由选择喜欢的&#x841d;&#x8389;视频作品，轻松实现在线观看。&#x841d;&#x8389;&#x793e;视频视频社区，是您享受视觉盛宴的最佳选择。赶快加入我们，开启您的&#x841d;&#x8389;视频社区之旅吧！</p>
 							</p>
 						</span>
 					</div>
